quick fix for upper-right options dropdown layout issue (used fixed positioning, and definitely should not have -- no longer fixed pos)

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -169,10 +169,9 @@ a:hover {
 #options {
     display: none;
     background: transparent;
-    position: fixed;
-    top: 10px;
+    position: absolute;
     right: 5px;
-    padding-top: 10px;
+    padding-top: 3px;
     width: 120px;
 
     -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
